# vulkanalia

./: .commits  .gitignore  .gitmodules  404.html  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  Vulkan-Docs  conclusion.html  development_environment.html  faq.html  index.html  introduction.html  overview.html  print.html
.github/workflows/: ci.yml  publish.yml  update.yml
advanced/: generating_mipmaps.html  multisampling.html
drawing/: command_buffers.html  framebuffers.html  rendering_and_presentation.html
dynamic/: push_constants.html  recycling_command_buffers.html  secondary_command_buffers.html
examples/: Cargo.toml
examples/shaders/default/: default.frag  default.vert  frag.spv  vert.spv
examples/shaders/egui/: egui.frag  egui.vert  frag.spv  vert.spv
examples/shaders/triangle/: vert.spv
examples/src/: lib.rs
ext/egui/: Cargo.toml  README.md
ext/egui/src/: lib.rs  texture.rs
ext/vma/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ext/vma/src/: allocation.rs  allocator.rs  enums.rs  flags.rs  lib.rs  pool.rs  virtual.rs  vma.rs
generator/: .editorconfig  build.gradle.kts  update.ps1
generator/src/main/kotlin/com/kylemayes/generator/: Input.kt  Main.kt
generator/src/main/kotlin/com/kylemayes/generator/generate/: Generate.kt
generator/src/main/kotlin/com/kylemayes/generator/registry/: Extend.kt  Extract.kt  Filter.kt  Index.kt  Parse.kt  Rename.kt
generator/src/main/kotlin/com/kylemayes/generator/support/: Case.kt  Changelog.kt  Command.kt  Extension.kt  Logger.kt  PeekableIterator.kt  Repository.kt  Xml.kt
generator/src/test/kotlin/com/kylemayes/generator/support/: ChangelogTest.kt  CommandTest.kt
generator/src/test/resources/changelog/: message.txt
generator/src/test/resources/changelog/expected/: prelude.md  released-bindings.md  released-no-bindings.md  unreleased-bindings.md  unreleased-no-bindings.md
generator/src/test/resources/changelog/initial/: prelude.md  released-bindings.md  released-no-bindings.md  unreleased-bindings.md  unreleased-no-bindings.md
layer/: Cargo.toml  README.md  VK_LAYER_vulkanalia_layer_example.dll.json  VK_LAYER_vulkanalia_layer_example.dylib.json  VK_LAYER_vulkanalia_layer_example.so.json
layer/src/: lib.rs
model/: depth_buffering.html  loading_models.html
pipeline/: conclusion.html  fixed_functions.html  introduction.html  render_passes.html  shader_modules.html
presentation/: image_views.html  swapchain.html  window_surface.html
quality/: generating_mipmaps.html  multisampling.html
setup/: base_code.html  instance.html  logical_device_and_queues.html  physical_devices_and_queue_families.html  validation_layers.html
swapchain/: recreation.html
texture/: combined_image_sampler.html  image_view_and_sampler.html  images.html
tutorial/: Cargo.toml
tutorial/book/: book.toml
tutorial/book/preprocessor/: Cargo.toml  build.rs  main.rs
tutorial/book/src/: SUMMARY.md  conclusion.md  development_environment.md  faq.md  introduction.md  overview.md
tutorial/book/src/advanced/: generating_mipmaps.md  multisampling.md
tutorial/book/src/drawing/: command_buffers.md  framebuffers.md  rendering_and_presentation.md
tutorial/book/src/dynamic/: push_constants.md  recycling_command_buffers.md  secondary_command_buffers.md
tutorial/book/src/model/: depth_buffering.md  loading_models.md
tutorial/book/src/pipeline/: conclusion.md  fixed_functions.md  introduction.md  render_passes.md  shader_modules.md
tutorial/book/src/presentation/: image_views.md  swapchain.md  window_surface.md
tutorial/book/src/quality/: generating_mipmaps.md  multisampling.md
tutorial/book/src/setup/: base_code.md  instance.md  logical_device_and_queues.md  physical_devices_and_queue_families.md  validation_layers.md
tutorial/book/src/swapchain/: recreation.md
tutorial/book/src/texture/: combined_image_sampler.md  image_view_and_sampler.md  images.md
tutorial/book/src/uniform/: descriptor_layout_and_buffer.md  descriptor_pool_and_sets.md  descriptor_set_layout_and_buffer.md
tutorial/book/src/vertex/: index_buffer.md  staging_buffer.md  vertex_buffer_creation.md  vertex_input_description.md
tutorial/shaders/09/: frag.spv  shader.vert  vert.spv
tutorial/shaders/21/: vert.spv
tutorial/shaders/25/: frag.spv  vert.spv
tutorial/shaders/26/: vert.spv
tutorial/shaders/30/: frag.spv  shader.frag  shader.vert  vert.spv
tutorial/src/: 00_base_code.rs  01_instance_creation.rs  02_validation_layers.rs  03_physical_device_selection.rs  04_logical_device.rs  05_window_surface.rs  06_swapchain_creation.rs  07_image_views.rs  08_graphics_pipeline.rs  09_shader_modules.rs  10_fixed_functions.rs  11_render_passes.rs  12_graphics_pipeline_complete.rs  13_framebuffers.rs  14_command_buffers.rs  15_hello_triangle.rs  16_swapchain_recreation-fixed.rs  16_swapchain_recreation.rs  17_vertex_input.rs  18_vertex_buffer.rs  19_staging_buffer.rs  20_index_buffer.rs  21_descriptor_layout.rs  21_descriptor_set_layout.rs  22_descriptor_sets.rs  23_texture_image.rs  24_sampler.rs  25_texture_mapping.rs  26_depth_buffering.rs  27_model_loading.rs  28_mipmapping.rs  29_multisampling.rs  30_push_constants.rs  31_recycling_command_buffers.rs  32_secondary_command_buffers.rs  manage.py  patch.ps1  patch.sh  patch.zsh
tutorial/src/scripts/: patch.ps1  patch.zsh
uniform/: descriptor_layout_and_buffer.html  descriptor_pool_and_sets.html  descriptor_set_layout_and_buffer.html
vertex/: index_buffer.html  staging_buffer.html  vertex_buffer_creation.html  vertex_input_description.html
vulkanalia/: Cargo.toml
vulkanalia-sys/: Cargo.toml
vulkanalia-sys/src/: arrays.rs  bitfields.rs  bitmasks.rs  commands.rs  constants.rs  enums.rs  extensions.rs  functions.rs  handles.rs  layer.rs  lib.rs  macros.rs  structs.rs  typedefs.rs  unions.rs  video.rs
vulkanalia/src/: bytecode.rs  chain.rs  lib.rs  loader.rs  window.rs  winit.rs
vulkanalia/src/vk/: builders.rs  chains.rs  commands.rs  enums.rs  extensions.rs  mod.rs  versions.rs
vulkanalia/tests/: builders.rs
(+25 files in other folders)
