[package]

publish = false

edition = "2018"

name = "examples"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.1.0"

readme = "../README.md"
license = "Apache-2.0"

description = "Examples."

[dependencies]

anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.10"
pretty_env_logger = "0.4"
thiserror = "1"
vulkanalia = { path = "../vulkanalia", features = ["libloading", "window"] }
winit = "0.28.1"
