[package]

publish = false

edition = "2018"

name = "tutorial"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.1.0"

readme = "../README.md"
license = "Apache-2.0"

description = "Tutorial."

[dependencies]

anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.3"
png = "0.16"
pretty_env_logger = "0.4"
tobj = { version = "2", features = ["log"] }
vulkanalia = { path = "../vulkanalia", features = ["libloading_", "winit_"] }
winit = "0.23"

[[bin]]

name = "00_base_code"
path = "src/00_base_code.rs"

[[bin]]

name = "01_instance_creation"
path = "src/01_instance_creation.rs"

[[bin]]

name = "02_validation_layers"
path = "src/02_validation_layers.rs"

[[bin]]

name = "03_physical_device_selection"
path = "src/03_physical_device_selection.rs"

[[bin]]

name = "04_logical_device"
path = "src/04_logical_device.rs"

[[bin]]

name = "05_window_surface"
path = "src/05_window_surface.rs"

[[bin]]

name = "06_swapchain_creation"
path = "src/06_swapchain_creation.rs"

[[bin]]

name = "07_image_views"
path = "src/07_image_views.rs"

[[bin]]

name = "08_graphics_pipeline"
path = "src/08_graphics_pipeline.rs"

[[bin]]

name = "09_shader_modules"
path = "src/09_shader_modules.rs"
