[package]

edition = "2018"

name = "vulkanalia"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.9.0"

readme = "../README.md"
license = "Apache-2.0"

description = "Vulkan bindings for Rust."

documentation = "https://docs.rs/vulkanalia"
repository = "https://github.com/KyleMayes/vulkanalia"

keywords = ["graphics", "vulkan"]
categories = ["graphics"]

[features]

provisional = ["vulkanalia-sys/provisional"]
window = ["raw-window-handle", "cocoa", "metal", "objc"]

[dependencies]

libloading = { version = "0.7", optional = true }
raw-window-handle = { version = "0.3", optional = true }
vulkanalia-sys = { version = "0.9", path = "../vulkanalia-sys" }

[target.'cfg(target_os = "macos")'.dependencies]

cocoa = { version = "0.24", optional = true }
metal = { version = "0.21", optional = true }
objc = { version = "0.2", optional = true }

[package.metadata.docs.rs]

features = ["libloading", "provisional", "window"]
