[package]

edition = "2018"

name = "vulkanalia"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.23.0"

readme = "../README.md"
license = "Apache-2.0"

description = "Vulkan bindings for Rust."

documentation = "https://docs.rs/vulkanalia"
repository = "https://github.com/KyleMayes/vulkanalia"

keywords = ["graphics", "vulkan"]
categories = ["graphics"]

[features]

default = ["std"]

std = ["vulkanalia-sys/std"]
no_std_error = ["vulkanalia-sys/no_std_error"]

provisional = ["vulkanalia-sys/provisional"]
window = ["raw-window-handle", "cocoa", "metal", "objc"]

[dependencies]

libloading = { version = "0.8", optional = true }
raw-window-handle = { version = "0.6", optional = true }
vulkanalia-sys = { version = "0.23", path = "../vulkanalia-sys", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]

cocoa = { version = "0.25", optional = true }
metal = { version = "0.27", optional = true }
objc = { version = "0.2", optional = true }

[package.metadata.docs.rs]

features = ["libloading", "provisional", "window"]
